<resources>
    <string name="app_name">RTH Booking Jadwal</string>
    <string name="app_name_management">RTH Management Booking Jadwal</string>
    <string name="text_selamat">Selamat Datang!</string>
    <string name="text_tgl_hari_ini">Tanggal Hari Ini:</string>
    <string name="text_overall">Overall:</string>
    <string name="text_maaf_ruqyah">Maaf, sedang Ruqyah!\nSilahkan pilih tanggal lain...</string>
    <string name="text_loading">Loading...</string>
    <string name="text_ruqyah_mode">Hari ini Khusus Ruqyah Only</string>
    <string name="text_rate_app">Bantu kami agar melayani lebih baik lagi... Lakukan Rate App sejenak ya?</string>
    <string name="text_nama_lengkap_anda">Nama Lengkap anda...</string>
    <string name="text_nomer_whatsapp">Nomer Whatsapp...</string>
    <string name="text_tutorial_big">Tutorial Booking Jadwal</string>
    <string name="text_tutorial_step_1">1.Pilih Profil anda Ikhwan atau Akhwat</string>
    <string name="text_tutorial_step_2">2.Check Tanggal</string>
    <string name="text_tutorial_step_3">3.Klik Jam yg diinginkan</string>
    <string name="text_tutorial_step_4">4.Isi format whatsapp dengan benar</string>
    <string name="text_tutorial_step_5">5.Kirim &amp; tunggu Konfirmasi</string>
    <string name="text_profil_ikhwan">Therapy\nIkhwan</string>
    <string name="text_profil_akhwat">Therapy\nAkhwat</string>
    <string name="text_profil_workshop">Workshop</string>
    <string name="text_profesi_umum">Umum</string>
    <string name="text_profesi_pelajar">Pelajar</string>
    <string name="text_profil_baru">Peserta Baru</string>
    <string name="text_profil_lama">Peserta Lama</string>
    <string name="text_profil_anda">Profil Anda ialah</string>
    <string name="text_booking_untuk">Booking Jadwal untuk</string>
    <string name="text_data_lengkap">Data Lengkap Anda</string>
    <string name="text_tanggal_jadwal">Pilih Tanggal Jadwal:</string>
    <string name="text_bulan_tahun_big">Februari 2022</string>
    <string name="text_button_check">Check</string>
    <string name="text_button_batal">Batal</string>
    <string name="text_button_ok">OK</string>
    <string name="text_button_login">Login</string>
    <string name="text_button_booking_bersama">Booking Saya &amp; Mereka</string>
    <string name="text_button_booking_mereka">Booking Mereka Saja</string>
    <string name="text_tanggal_big">03 Februari 2022</string>
    <string name="text_nama_bulan_big">Februari 2022</string>
    <string name="text_jam_small">Jam</string>
    <string name="text_empty_small">-</string>
    <string name="text_booking_small">Booking</string>
    <string name="text_therapy_small">Therapy</string>
    <string name="text_pilih_small">Pilih</string>
    <string name="text_keterangan_small">Keterangan</string>
    <string name="text_tersedia_small">Tersedia</string>
    <string name="text_pilih_tersedia_small">Pilih salah satu jam yg tersedia</string>
    <string name="text_pilih_opsi_treatment">Tentukan opsi treatment</string>
    <string name="text_pilih_jadwal_small">Pilih tanggal yg akan di-set</string>
    <string name="text_aktifkan_jam_jadwal">Aktifkan jam jadwal yg telah terisi</string>
    <string name="text_tidak_tersedia_small">Tidak Tersedia</string>
    <string name="text_hour_08">08:00</string>
    <string name="text_hour_10">10:00</string>
    <string name="text_hour_13">13:00</string>
    <string name="text_hour_16">16:00</string>
    <string name="text_hour_20">20:00</string>
    <string name="text_username_atau_hp">Username atau No.HP</string>
    <string name="text_password">Password</string>
    <string name="text_tutorial_step_1a">1.Pilih Tanggal spesifik</string>
    <string name="text_tutorial_step_2b">2.Tentukan jam ketersediaan therapy</string>
    <string name="text_tutorial_step_3c">3.Save Jadwal tersebut</string>
    <string name="text_tutorial_step_4d">4.Otomatis tanda warna pada kalendar akan ter-update!</string>
    <string name="text_tutorial_step_5e">5.Pastikan penjadwalan teratur untuk masa 2 pekan</string>
    <string name="text_userlogin_gagal">Login Gagal harap check username &amp; password!</string>
    <string name="text_day_ahad">A</string>
    <string name="text_day_senin">S</string>
    <string name="text_day_selasa">S</string>
    <string name="text_day_rabu">R</string>
    <string name="text_day_kamis">K</string>
    <string name="text_day_jumat">J</string>
    <string name="text_day_sabtu">S</string>

    <string name="text_saya_tak_tau_small">Saya tidak tau, umum saja.</string>
    <string name="text_hijamah_small">Hijamah Bekam (+ topung)</string>
    <string name="text_pijat_small">Pijat Syaraf (full body)</string>
    <string name="text_elektrik_small">Elektrik (+ topung)</string>
    <string name="text_fashdu_small">Fashdu</string>
    <string name="text_nebu_small">Nebulizer</string>
    <string name="text_gurah_small">Gurah (+ topung)</string>
    <string name="text_moxa_small">Moxa</string>
    <string name="text_lintah_small">Leech Lintah (+ topung)</string>
    <string name="text_ruqyah_small">Ruqyah Syariyyah</string>

    <string name="text_estimasi_big">Estimasi Biaya : </string>

    <string name="text_legend_ruqyah_day">Ruqyah Day</string>
    <string name="text_legend_belum_terjadwal">Belum Terjadwal</string>
    <string name="text_legend_mulai_sesi">Terisi beberapa Jadwal </string>
    <string name="text_legend_semua_tidak">Semua Jadwal Sudah Penuh</string>
    <string name="text_legend_semua_ready">Semua Jadwal Siap Dipakai</string>
    <string name="text_isian_keterangan">Isian keterangan</string>
    <string name="text_label_profil_nama">Nama : </string>
    <string name="text_label_profil_hubungan">Hubungan : </string>
    <string name="text_label_profil_nama_hint">Tulis nama lengkap </string>
    <string name="text_label_profil_kelamin">Kelamin : </string>
    <string name="text_label_profil_alamat">Alamat : </string>
    <string name="text_label_profil_alamat_hint">Tulis alamat lengkap </string>
    <string name="text_label_profil_kontak">No. HP : </string>
    <string name="text_label_profil_kontak_hint">Tulis nomor whatsapp </string>
    <string name="text_label_profil_email">Email : </string>
    <string name="text_label_profil_email_hint">Tulis email yg masih aktif </string>
    <string name="text_label_profil_username">Username : </string>
    <string name="text_label_profil_username_hint">Tulis username untuk login</string>
    <string name="text_label_profil_password">Password : </string>
    <string name="text_label_profil_member">Membership : </string>
    <string name="text_label_empty"> </string>
    <string name="text_label_family_member">Family Member</string>
    <string name="text_label_atur_daftarnama">Atur daftar nama disini</string>
    <string name="text_label_member_baru">Member Baru</string>
    <string name="text_label_booking_1">Booking 1</string>
    <string name="text_label_belum_ada_family">Belum ada family member</string>
    <string name="text_label_multi_booking">Multi Booking</string>
    <string name="text_label_pilih_booking">Pilih Mode Booking</string>


    <string-array name="membership_user">
        <item>patient</item>
        <item>administrator</item>
    </string-array>

    <string-array name="gender_user">
        <item>wanita</item>
        <item>pria</item>
    </string-array>

    <string-array name="hubungan_member">
        <item>ibu</item>
        <item>ayah</item>
        <item>anak</item>
        <item>saudara kandung</item>
        <item>saudara jauh</item>
        <item>keponakan</item>
        <item>paman</item>
        <item>bibi</item>
        <item>keluarga angkat</item>
        <item>kerabat</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>