<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp"
    tools:context=".DateSpecificActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="chooseProfile"
            app:srcCompat="@drawable/ikhwan_logo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_rth_booking64" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/text_aktifkan_jam_jadwal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTanggalBulanTahun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/text_nama_bulan_big"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearToggleHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="60dp">

            <Switch
                android:id="@+id/switchJam8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="toggleJam"
                android:text="@string/text_hour_08" />

            <Switch
                android:id="@+id/switchJam10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="toggleJam"
                android:text="@string/text_hour_10" />

            <Switch
                android:id="@+id/switchJam13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="toggleJam"
                android:text="@string/text_hour_13" />

            <Switch
                android:id="@+id/switchJam16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="toggleJam"
                android:text="@string/text_hour_16" />

            <Switch
                android:id="@+id/switchJam20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="toggleJam"
                android:text="@string/text_hour_20" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>