<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp"
    tools:context=".BookingScheduleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="chooseProfile"
            app:srcCompat="@drawable/ikhwan_logo" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_rth_booking64" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDatePicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="TextView"
            android:textSize="24sp"
            tools:text="@string/text_tanggal_big" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/text_jam_small" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/text_keterangan_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHour08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_hour_08" />

                    <TextView
                        android:id="@+id/textViewHour10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_hour_10" />

                    <TextView
                        android:id="@+id/textViewHour13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_hour_13" />

                    <TextView
                        android:id="@+id/textViewHour16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_hour_16" />

                    <TextView
                        android:id="@+id/textViewHour20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/text_hour_20" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewKet08"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="openChatJam08"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/text_tidak_tersedia_small"
                        android:textColor="@color/colorRed" />

                    <TextView
                        android:id="@+id/textViewKet10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="openChatJam10"
                        android:paddingLeft="10dp"
                        android:text="@string/text_tidak_tersedia_small"
                        android:textColor="@color/colorRed" />

                    <TextView
                        android:id="@+id/textViewKet13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="openChatJam13"
                        android:paddingLeft="10dp"
                        android:text="@string/text_tidak_tersedia_small"
                        android:textColor="@color/colorRed" />

                    <TextView
                        android:id="@+id/textViewKet16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="openChatJam16"
                        android:paddingLeft="10dp"
                        android:text="@string/text_tidak_tersedia_small"
                        android:textColor="@color/colorRed" />

                    <TextView
                        android:id="@+id/textViewKet20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:onClick="openChatJam20"
                        android:paddingLeft="10dp"
                        android:text="@string/text_tidak_tersedia_small"
                        android:textColor="@color/colorRed" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_pilih_tersedia_small" />

    </LinearLayout>

</LinearLayout>